--- a/src/JtlTask.WebApi/JtlTask.WebApi.csproj
+++ b/src/JtlTask.WebApi/JtlTask.WebApi.csproj
@@ -4,12 +4,15 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FastEndpoints" />
-    <PackageReference
-      Include="FastEndpoints.Generator"
-      PrivateAssets="all"
-      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"
-    />
+    <PackageReference Include="FastEndpoints.Generator" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="FastEndpoints.Security" />
     <PackageReference Include="FastEndpoints.Swagger" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Users\Application\Application.csproj" />
+    <ProjectReference Include="..\Users\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Tasks\Application\Application.csproj" />
+    <ProjectReference Include="..\Tasks\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 </Project>
