--- a/src/JtlTask.WebApi/JtlTask.WebApi.csproj
+++ b/src/JtlTask.WebApi/JtlTask.WebApi.csproj
@@ -4,7 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FastEndpoints" />
-    <PackageReference Include="FastEndpoints.Generator" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference
+      Include="FastEndpoints.Generator"
+      PrivateAssets="all"
+      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"
+    />
     <PackageReference Include="FastEndpoints.Security" />
     <PackageReference Include="FastEndpoints.Swagger" />
   </ItemGroup>
