feat: reorganize project structure and update project references for Tasks and Users modules

--- a/src/Tasks.Application/Tasks.Application.csproj
+++ b/src/Tasks.Application/Tasks.Application.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="../Tasks.Domain/Tasks.Domain.csproj" />
   </ItemGroup>
 </Project>
