--- a/src/Users.Application/Users.Application.csproj
+++ b/src/Users.Application/Users.Application.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="../Users.Domain/Users.Domain.csproj" />
   </ItemGroup>
 </Project>
