--- a/src/Tasks.Domain/Tasks.Domain.csproj
+++ b/src/Tasks.Domain/Tasks.Domain.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\..\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="../SharedKernel/SharedKernel.csproj" />
   </ItemGroup>
 </Project>
