--- a/tests/Tests.Tasks/Tests.Tasks.csproj
+++ b/tests/Tests.Tasks/Tests.Tasks.csproj
@@ -7,16 +7,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit.v3" />
-    <PackageReference
-      Include="xunit.runner.visualstudio"
-      PrivateAssets="all"
-      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"
-    />
+    <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../../src/Tasks/Domain/Domain.csproj" />
-    <ProjectReference Include="../../src/Tasks/Infrastructure/Infrastructure.csproj" />
-    <ProjectReference Include="../../src/Tasks/Application/Application.csproj" />
-    <ProjectReference Include="../../src/JtlTask.WebApi/JtlTask.WebApi.csproj" />
+    <ProjectReference Include="../../src/Tasks.Application/Tasks.Application.csproj" />
+    <ProjectReference Include="../../src/Tasks.Domain/Tasks.Domain.csproj" />
+    <ProjectReference Include="../../src/Tasks.Infrastructure/Tasks.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
