--- a/tests/Tests.Users/Tests.Users.csproj
+++ b/tests/Tests.Users/Tests.Users.csproj
@@ -7,16 +7,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit.v3" />
-    <PackageReference
-      Include="xunit.runner.visualstudio"
-      PrivateAssets="all"
-      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"
-    />
+    <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../../src/Users/Domain/Domain.csproj" />
-    <ProjectReference Include="../../src/Users/Infrastructure/Infrastructure.csproj" />
-    <ProjectReference Include="../../src/Users/Application/Application.csproj" />
-    <ProjectReference Include="../../src/JtlTask.WebApi/JtlTask.WebApi.csproj" />
+    <ProjectReference Include="../../src/Users.Application/Users.Application.csproj" />
+    <ProjectReference Include="../../src/Users.Domain/Users.Domain.csproj" />
+    <ProjectReference Include="../../src/Users.Infrastructure/Users.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
