--- a/tests/Tests.Tasks/Tests.Tasks.csproj
+++ b/tests/Tests.Tasks/Tests.Tasks.csproj
@@ -7,7 +7,11 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit.v3" />
-    <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference
+      Include="xunit.runner.visualstudio"
+      PrivateAssets="all"
+      IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"
+    />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../../src/Tasks.Application/Tasks.Application.csproj" />
