feat: add missing project reference for Users.Infrastructure in JtlTask.WebApi

--- a/src/JtlTask.WebApi/JtlTask.WebApi.csproj
+++ b/src/JtlTask.WebApi/JtlTask.WebApi.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="../Tasks.Application/Tasks.Application.csproj" />
     <ProjectReference Include="../Users.Application/Users.Application.csproj" />
+    <ProjectReference Include="../Users.Infrastructure/Users.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
