--- a/src/Users.Application/Users.Application.csproj
+++ b/src/Users.Application/Users.Application.csproj
@@ -2,4 +2,7 @@
   <ItemGroup>
     <ProjectReference Include="../Users.Domain/Users.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+  </ItemGroup>
 </Project>
