--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,19 +5,20 @@
   <ItemGroup>
     <!-- Static code analysis -->
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.15.0.120848" />
-    <!-- Application -->
-    <!-- Infrastructure -->
-    <!-- Web.Api -->
+    <!-- Packages -->
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
     <PackageVersion Include="FastEndpoints" Version="7.0.0" />
+    <PackageVersion Include="FastEndpoints.Security" Version="7.0.0" />
+    <PackageVersion Include="FastEndpoints.Swagger" Version="7.0.0" />
     <PackageVersion
       Include="FastEndpoints.Generator"
       Version="7.0.0"
       PrivateAssets="all"
       IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive"
     />
-    <PackageVersion Include="FastEndpoints.Security" Version="7.0.0" />
-    <PackageVersion Include="FastEndpoints.Swagger" Version="7.0.0" />
-    <!-- ArchitectureTests -->
+    <!-- TestPackages -->
     <PackageVersion Include="FastEndpoints.Testing" Version="7.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageVersion Include="Shouldly" Version="4.3.0" />
