feat: update package references to use Microsoft.EntityFrameworkCore.Sqlite

--- a/src/Users.Infrastructure/Users.Infrastructure.csproj
+++ b/src/Users.Infrastructure/Users.Infrastructure.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../Users.Application/Users.Application.csproj" />
