--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 ##
 ## Get latest from `dotnet new gitignore`
 
-# dotenv files
-.env
-
 # User-specific files
 *.rsuser
 *.suo
@@ -436,8 +433,8 @@ test-results/
 Icon
 
 
-# Thumbnails
-._*
+# ignore files that start with .
+.*
 
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
