--- a/src/WorkItems.Infrastructure/WorkItems.Infrastructure.csproj
+++ b/src/WorkItems.Infrastructure/WorkItems.Infrastructure.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="../WorkItems.Application/WorkItems.Application.csproj" />
   </ItemGroup>
 </Project>
