--- a/tests/Tests.WorkItems/Tests.WorkItems.csproj
+++ b/tests/Tests.WorkItems/Tests.WorkItems.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="FastEndpoints.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="NetArchTest.Rules" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit.v3" />
     <PackageReference
