--- a/tests/Test.JtlTask.WebApi/Test.JtlTask.WebApi.csproj
+++ b/tests/Test.JtlTask.WebApi/Test.JtlTask.WebApi.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FastEndpoints.Testing" />
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="xunit.v3" />
