--- a/src/JtlTask.WebApi/appsettings.json
+++ b/src/JtlTask.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "None"
     }
+  },
+  "ConnectionStrings": {
+    "UsersDatabase": "Data Source=/app/data/.users.db",
+    "WorkItemsDatabase": "Data Source=/app/data/.work-items.db"
   }
 }
